Fix themed styles not having enough contrast

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -3,11 +3,11 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
-  padding: 2rem;
-  height: 90vh;
-  width: 100%;
+  height: 95vh;
+  margin: 0 auto;
+  width: 90vw;
 }
 
 .footer {
