--- a/styles/Nav.module.scss
+++ b/styles/Nav.module.scss
@@ -1,8 +1,58 @@
 @import '../utils/variables';
 
+
+
 .Nav {
+    position: relative;
     display: flex;
+    flex: 0;
     width: 100%;
-    justify-content: right;
-    padding: 0 1rem;
+    align-items: center;
+    font-weight: 300;
+    padding: 32px 16px;
+    color: var(--color-icon);
+    margin: 0 auto 16px;
+    font-family: Montserrat, sans-serif;
+
+    .snipcartTotalPrice {
+        color: var(--color-third);
+        font-size: 14px;
+
+    }
+
+    div {
+        font-family: inherit;
+        display: block;
+        color: var(--color-third);
+
+        h3 {
+            font-family: inherit;
+            font-weight: 400;
+            font-size: 1.17rem;
+
+        }
+    }
+
+    .spaceHolder {
+        display: flex;
+        height: 1rem;
+        width: 1rem;
+        flex: 1;
+        justify-content: flex-start;
+    }
+
+    .snipcartLink {
+        display: flex;
+        flex: 1;
+        justify-content: flex-end;
+        height: 1rem;
+        line-height: 1rem;
+        width: 0.2rem;
+
+        svg {
+            margin-right: 0.4rem;
+        }
+    }
+
+
 }
