--- a/styles/ProductGallery.module.scss
+++ b/styles/ProductGallery.module.scss
@@ -1,5 +1,6 @@
 .productGallery {
     width: 100%;
+    flex: 0;
     display: grid;
     grid-template-columns: repeat(4, 25%);
     grid-gap: 0.4rem;
